overflow fix

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ p {font-size: 16px;}
   /* border-style: solid;
   border-width: 1px; */
   color: black;
-  overflow-y: hidden;
+  overflow: hidden;
   position: relative;
   width: 100%;
 }
